// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListItem should render with props 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      bcd
    </h3>
  </Link>
  <p>
    $0.01
    -
    December 28, 1969
  </p>
</div>
`;

exports[`ExpenseListItem should render without any props 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/undefined"
  >
    <h3 />
  </Link>
  <p>
    $0.00
    -
    January 1, 1970
  </p>
</div>
`;
